<resources>
    <string name="app_name">SampleProjectt</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="home_town">Home Town</string>
    <string name="phone_number">Phone Number</string>
    <string name="telephone_number">Telephone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="select_profile_photo">Select Profile Photo</string>
</resources>